data/all_generated_tests/raw_wast_tests/unreachable_InvalidorInconsistentControlFlowGraph_1411.wast
;; 2. **Test Description:** Put the `unreachable` instruction inside a loop, followed by loop iterations and a `br` (branch) instruction. This checks whether the loop correctly handles the trap caused by `unreachable` and doesn't continue looping or branch improperly.    - **Constraint:** Immediate trap should break loop execution.    - **Relation to CFG:** Validates CFG's loop termination and branch consistency.

(assert_invalid
  (module (func $type-loop-unreachable-in-loop
    (loop $L
      (unreachable)
      (br $L)
    )
  ))
  "unreachable condition within loop")